v.0.2 - updeted index.html added .tresub margin-top 24px

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div class="form-page">
       <form action="#" class="form" netlify id="form">
-        <img src="img/trezub.svg" alt="tresub" class="trezub">
+        <img src="img/trezub.svg" alt="tresub" class="tresub">
         <h4 class="form-title">Поділися, будь ласка, поштою</h4>
         <p class="form-desc">та запиши гуся до бандерозагону</p>
 
